--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://127.0.0.1:8000",
+  "type": "module",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -10,8 +11,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.3",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "material-table": "^1.69.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lottie": "^1.2.3",
@@ -24,6 +35,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "nodemon api/index.js",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
